--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://poemkiller.github.io/weather-viz/",
   "name": "weather-viz",
   "private": true,
   "version": "0.0.0",
@@ -8,6 +9,8 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d built"
   },
   "dependencies": {
     "axios": "^1.6.8",
